--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-/CS 188 - Artificial Intelligence/review questions.aux
-/CS 188 - Artificial Intelligence/review questions.log
-/CS 188 - Artificial Intelligence/review questions.synctex.gz
+/cs 188 - artificial intelligence/review material/review questions.aux
+/cs 188 - artificial intelligence/review material/review questions.log
+/cs 188 - artificial intelligence/review material/review questions.synctex.gz
